--- a/client-tez/tez-shaded/pom.xml
+++ b/client-tez/tez-shaded/pom.xml
@@ -90,6 +90,10 @@
               <pattern>org.apache.tez.runtime.library.shuffle.impl.ShuffleUserPayloads</pattern>
               <shadedPattern>${shading.prefix}.org.apache.tez.runtime.library.shuffle.impl.ShuffleUserPayloads</shadedPattern>
             </relocation>
+            <relocation>
+              <pattern>org.apache.tez.common.TezCommonUtils</pattern>
+              <shadedPattern>${shading.prefix}.org.apache.tez.common.TezCommonUtils</shadedPattern>
+            </relocation>
           </relocations>
           <artifactSet>
             <includes>
