--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -210,3 +210,33 @@ jobs:
           name: mr-unit-test-log
           path: |
             **/target/test/
+
+  tez:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        java:
+          - 8
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup JDK ${{ matrix.java }}
+        uses: actions/setup-java@v2
+        with:
+          distribution: zulu
+          java-version: ${{ matrix.java }}
+          cache: maven
+          check-latest: false
+      - name: Test with Maven
+        run: |
+          PROFILES="-Pgoogle-mirror,tez"
+          TEST_MODULES="client-tez/tez,client-tez/tez-shaded,tests/tez-it"
+          build/mvn $PROFILES -pl $TEST_MODULES -am clean install -DskipTests
+          build/mvn $PROFILES -pl $TEST_MODULES test
+      - name: Upload test log
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: tez-unit-test-log
+          path: |
+            **/target/test/
