--- a/client-tez/tez-shaded/pom.xml
+++ b/client-tez/tez-shaded/pom.xml
@@ -40,6 +40,25 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptors>
+            <descriptor>src/main/resources/assembly.xml</descriptor>
+          </descriptors>
+          <appendAssemblyId>false</appendAssemblyId>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <configuration>
           <relocations>
@@ -56,20 +75,24 @@
               <shadedPattern>${shading.prefix}.io.netty</shadedPattern>
             </relocation>
             <relocation>
-              <pattern>org.apache.commons</pattern>
-              <shadedPattern>${shading.prefix}.org.apache.commons</shadedPattern>
-            </relocation>
-            <relocation>
               <pattern>org.scala-lang</pattern>
               <shadedPattern>${shading.prefix}.org.scala-lang</shadedPattern>
             </relocation>
             <relocation>
-              <pattern>org.lz4</pattern>
-              <shadedPattern>${shading.prefix}.org.lz4</shadedPattern>
-            </relocation>
-            <relocation>
               <pattern>org.roaringbitmap</pattern>
               <shadedPattern>${shading.prefix}.org.roaringbitmap</shadedPattern>
+            </relocation>
+            <relocation>
+              <pattern>org.apache.commons.lang3</pattern>
+              <shadedPattern>${shading.prefix}.org.apache.commons.lang3</shadedPattern>
+            </relocation>
+            <relocation>
+              <pattern>org.apache.tez.runtime.library.shuffle.impl.ShuffleUserPayloads</pattern>
+              <shadedPattern>${shading.prefix}.org.apache.tez.runtime.library.shuffle.impl.ShuffleUserPayloads</shadedPattern>
+            </relocation>
+            <relocation>
+              <pattern>org.apache.tez.common.TezCommonUtils</pattern>
+              <shadedPattern>${shading.prefix}.org.apache.tez.common.TezCommonUtils</shadedPattern>
             </relocation>
           </relocations>
           <artifactSet>
