--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -704,7 +704,10 @@ components:
       properties:
         eventType:
           type: string
-          description: The type of the event. Legal types are 'None', 'Immediately', 'Decommission', 'DecommissionThenIdle', 'Graceful', 'Recommission'
+          description: |
+            The type of the event.
+            Legal types are 'None', 'Immediately', 'Decommission', 'DecommissionThenIdle', 'Graceful', 'Recommission'
+          # met issue with enum, see details in CELEBORN-1607
           # enum:
             # - Immediately
             # - Decommission
