--- a/openapi/openapi-client/pom.xml
+++ b/openapi/openapi-client/pom.xml
@@ -244,6 +244,7 @@
                     <hideGenerationTimestamp>true</hideGenerationTimestamp>
                     <supportUrlQuery>false</supportUrlQuery>
                     <annotationLibrary>none</annotationLibrary>
+                    <useEnumCaseInsensitive>true</useEnumCaseInsensitive>
                   </configOptions>
                 </configuration>
               </execution>
@@ -278,6 +279,7 @@
                     <hideGenerationTimestamp>true</hideGenerationTimestamp>
                     <supportUrlQuery>false</supportUrlQuery>
                     <annotationLibrary>none</annotationLibrary>
+                    <useEnumCaseInsensitive>true</useEnumCaseInsensitive>
                   </configOptions>
                 </configuration>
               </execution>
