--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,8 @@
 
     <!-- use hadoop-3 as default  -->
     <hadoop.version>3.3.6</hadoop.version>
-    <hadoop.scope>compile</hadoop.scope>
+    <hadoop.deps.scope>compile</hadoop.deps.scope>
+    <hadoop.deps.optional>false</hadoop.deps.optional>
     <!--
     If you change codahale.metrics.version, you also need to change
     the link to metrics.dropwizard.io in docs/monitoring.md.
@@ -1279,13 +1280,15 @@
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-client-api</artifactId>
           <version>${hadoop.version}</version>
-          <scope>${hadoop.scope}</scope>
+          <scope>${hadoop.deps.scope}</scope>
+          <optional>${hadoop.deps.optional}</optional>
         </dependency>
         <dependency>
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-client-runtime</artifactId>
           <version>${hadoop.version}</version>
-          <scope>${hadoop.scope}</scope>
+          <scope>${hadoop.deps.scope}</scope>
+          <optional>${hadoop.deps.optional}</optional>
         </dependency>
       </dependencies>
     </profile>
@@ -1305,7 +1308,8 @@
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-client</artifactId>
           <version>${hadoop.version}</version>
-          <scope>${hadoop.scope}</scope>
+          <scope>${hadoop.deps.scope}</scope>
+          <optional>${hadoop.deps.optional}</optional>
           <exclusions>
             <exclusion>
               <groupId>org.apache.hadoop</groupId>
@@ -1354,13 +1358,15 @@
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-aws</artifactId>
           <version>${hadoop.version}</version>
-          <scope>${hadoop.scope}</scope>
+          <scope>${hadoop.deps.scope}</scope>
+          <optional>${hadoop.deps.optional}</optional>
         </dependency>
         <dependency>
           <groupId>com.amazonaws</groupId>
           <artifactId>aws-java-sdk-bundle</artifactId>
           <version>${aws.version}</version>
-          <scope>${hadoop.scope}</scope>
+          <scope>${hadoop.deps.scope}</scope>
+          <optional>${hadoop.deps.optional}</optional>
         </dependency>
       </dependencies>
     </profile>
