--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -29,6 +29,11 @@
   <packaging>jar</packaging>
   <name>Celeborn CLI</name>
 
+  <properties>
+    <hadoop.deps.scope>provided</hadoop.deps.scope>
+    <hadoop.deps.optional>true</hadoop.deps.optional>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>info.picocli</groupId>
