--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -32,6 +32,7 @@
   <properties>
     <hadoop.deps.scope>provided</hadoop.deps.scope>
     <hadoop.deps.optional>true</hadoop.deps.optional>
+    <jdk.tools.optional>true</jdk.tools.optional>
   </properties>
 
   <dependencies>
