--- a/spi/pom.xml
+++ b/spi/pom.xml
@@ -32,5 +32,6 @@
   <properties>
     <hadoop.deps.scope>provided</hadoop.deps.scope>
     <hadoop.deps.optional>true</hadoop.deps.optional>
+    <jdk.tools.optional>true</jdk.tools.optional>
   </properties>
 </project>
