[CELEBORN-1616] Shade com.google.thirdparty to prevent dependency conflicts

--- a/client-spark/spark-3-shaded/pom.xml
+++ b/client-spark/spark-3-shaded/pom.xml
@@ -52,6 +52,10 @@
               <shadedPattern>${shading.prefix}.com.google.common</shadedPattern>
             </relocation>
             <relocation>
+              <pattern>com.google.thirdparty</pattern>
+              <shadedPattern>${shading.prefix}.com.google.thirdparty</shadedPattern>
+            </relocation>
+            <relocation>
               <pattern>io.netty</pattern>
               <shadedPattern>${shading.prefix}.io.netty</shadedPattern>
             </relocation>
