--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -263,7 +263,7 @@ paths:
       tags:
         - Ratis
       operationId: transferRatisLeader
-      description: Transfer a group leader to the specified server.
+      description: Transfer the group leader to the specified server.
       requestBody:
         content:
           application/json:
