--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -789,7 +789,7 @@ components:
           type: string
           description: The address of the peer to transfer the leader.
       required:
-        - peer
+        - peerAddress
 
     HandleResponse:
       type: object
