--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -333,6 +333,22 @@ paths:
               schema:
                 $ref: '#/components/schemas/HandleResponse'
 
+  paths:
+    /api/v1/ratis/local/raft_meta_conf:
+      post:
+        tags:
+          - Ratis
+        operationId: localRaftMetaConf
+        description: Generate a new-raft-meta.conf file.
+        responses:
+          "200":
+            description: The request was successful.
+            content:
+              application/octet-stream:
+                schema:
+                  type: string
+                  format: binary
+
 components:
   schemas:
     ConfigData:
